--- a/01_Elementary_Operations.ipynb
+++ b/01_Elementary_Operations.ipynb
@@ -23,19 +23,31 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SaiShivaniL/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d_4Xzhe4p5Jh"
+        "id": "d_4Xzhe4p5Jh",
+        "outputId": "3b9e90ae-a9f3-4b72-88fb-e890387fd066",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!python --version"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python 3.7.11\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -59,35 +71,80 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dm1hT_B9jXGu"
+        "id": "dm1hT_B9jXGu",
+        "outputId": "4288cba9-e949-4569-a069-e3de84d41d3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "3 + 2         # addition"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sUhkQPuhXbYj"
+        "id": "sUhkQPuhXbYj",
+        "outputId": "5a711cc1-732e-480e-d514-f4f03ee453ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "3 - 2         # subtraction"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B1gLBI1LXo1m"
+        "id": "B1gLBI1LXo1m",
+        "outputId": "026b0681-e3e7-4ceb-fc72-8db07ac6bc47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 * 3         # multiplication"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -103,68 +160,158 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2LQZZcRPX5Bt"
+        "id": "2LQZZcRPX5Bt",
+        "outputId": "b18f2e78-5e9c-4f90-824f-639c3cd72a83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type (7 / 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qjJkqqXcX95p"
+        "id": "qjJkqqXcX95p",
+        "outputId": "6b5da365-75da-4682-8620-f216f5499c5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 // 2        # floor division (returns an integer - discards decimal part)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2L_ku8CLYKDC"
+        "id": "2L_ku8CLYKDC",
+        "outputId": "6757763a-336b-49e7-a771-f1cc081d4473",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type ( 7 // 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dH2NmrgNYM97"
+        "id": "dH2NmrgNYM97",
+        "outputId": "0d900b8a-7f28-47cd-be97-34b979d38f67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "7 % 2         # modulus operator - remainder is fetched after division"
+        "7 % 3         # modulus operator - remainder is fetched after division"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wNTJter-YZ7W"
+        "id": "wNTJter-YZ7W",
+        "outputId": "3c010d3a-bbb6-4c53-d7b2-b8b808676b24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 ** 2        # exponentiation "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "asikDVm7YvYT"
+        "id": "asikDVm7YvYT",
+        "outputId": "5b053c1a-6c8e-4a66-983f-d45f1f514b0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 - 2 * 2     # operator precedence : (), **, -(unary),  * or /, + or -"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -174,54 +321,130 @@
       "source": [
         "# on string variables\n",
         "first_name = 'charlie'\n",
-        "second_name = \"chaplin\""
+        "second_name = \"chaplin\"\n"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oYu_ynPOeS2_"
+        "id": "oYu_ynPOeS2_",
+        "outputId": "8b2f39e7-d321-48f2-af0e-5cbf68e23159",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliechaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oIY8q8wgehFC"
+        "id": "oIY8q8wgehFC",
+        "outputId": "abd1071a-1bd0-4881-eb21-7a357c54159f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + ' ' + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charlie chaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Vuv8iMbevRJ"
+        "id": "6Vuv8iMbevRJ",
+        "outputId": "c338d8e9-6385-4488-c5de-fa2e648e094c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name * 2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QPblckrXe2ui"
+        "id": "QPblckrXe2ui",
+        "outputId": "97fabff5-6aa5-4e85-e67b-65a50ec8ff12",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "(first_name * 2) + ' ' + (second_name * 3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie chaplinchaplinchaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -243,31 +466,59 @@
         "brick_breadth = 4\n",
         "brick_height = 2"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pKZ7uDHCZ3At"
+        "id": "pKZ7uDHCZ3At",
+        "outputId": "03f90b44-88bc-4c81-84b9-494bbe3969b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "brick_volume = brick_length * brick_breadth * brick_height\n",
         "print (brick_volume)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S2zZsoBb2z45"
+        "id": "S2zZsoBb2z45",
+        "outputId": "fe21e21c-981d-401f-df69-f2b0500d44f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# 2. What will the expression -3 ** 2 evaluate to ?\n"
+        "# 2. What will the expression -3 ** 2 evaluate to ?\n",
+        "-3**2\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -281,13 +532,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fZ4Tpi0B27lf"
+        "id": "fZ4Tpi0B27lf",
+        "outputId": "86e398c3-7031-46b8-ed1e-cd59981c958f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "fuel_cost=102\n",
+        "mileage=38\n",
+        "fuel_worth=50\n",
+        "distance_travelled=(mileage/fuel_cost)*fuel_worth\n",
+        "print(\"Distance that can be travelled with 50 rupees is\",round(distance_travelled,2))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Distance that can be travelled with 50 rupees is 18.63\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
