--- a/04_Conditional_Statement.ipynb
+++ b/04_Conditional_Statement.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SaiShivaniL/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,43 +60,96 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eDT9R8AOqnsz"
+        "id": "eDT9R8AOqnsz",
+        "outputId": "c9e74638-0448-44a1-9d74-100072da5df6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 5\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gbOsmJaIqiIP"
+        "id": "gbOsmJaIqiIP",
+        "outputId": "1c260eb4-8252-4207-9986-bdc614ece11b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = int(a)\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8D8fTIoYqdGE"
+        "id": "8D8fTIoYqdGE",
+        "outputId": "f061f299-c551-46cb-e58c-f9a8028fe330",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer b: 8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cehfXMvowN0S"
+        "id": "cehfXMvowN0S",
+        "outputId": "820a9cfc-3cfe-41aa-b526-148590a7a893",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a > b):\n",
@@ -108,8 +161,17 @@
         "else:\n",
         "  print (\"a is neither greater than b,  nor less than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is less than b\n",
+            "which is clear\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +185,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZF-tcVscuADN"
+        "id": "ZF-tcVscuADN",
+        "outputId": "c675592e-dee4-42ed-d1c0-8fc4a3a9c3cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -131,19 +197,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 5\n",
+            "Enter an integer b: 9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N2E5veph8_9V"
+        "id": "N2E5veph8_9V",
+        "outputId": "a38793ac-097b-4fd4-cce1-90ee8b1a73a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a < b): print (\"a is lesser than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is lesser than b\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,7 +244,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SwO5vZ8LxGMA"
+        "id": "SwO5vZ8LxGMA",
+        "outputId": "b613877a-7c89-42ed-bb6f-b0c60a1c5af8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -165,19 +256,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 9\n",
+            "Enter an integer b: 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-SLed6y6xJoq"
+        "id": "-SLed6y6xJoq",
+        "outputId": "ecf8a55e-5642-487c-d601-70d88aa155e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"a is less than b\") if (a < b) else print (\"a - {} is not less than b - {}.\".format(a, b))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a - 9 is not less than b - 2.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -191,25 +303,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JHGOgFs-vWbq"
+        "id": "JHGOgFs-vWbq",
+        "outputId": "87a654ee-44e7-441b-9426-daf771327299",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter first string: \")\n",
         "b = input (\"Enter second string: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter first string: 10\n",
+            "Enter second string: 5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qgqqBPjAvLQx"
+        "id": "qgqqBPjAvLQx",
+        "outputId": "ef89c187-e095-4117-b2fa-d564567bc83a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"first string comes earlier\") if (a<b) else print (\"second string comes earlier\") if (b<a) else print (\"both strings are same\")  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "first string comes earlier\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,13 +360,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b_QjChOW2VJY"
+        "id": "b_QjChOW2VJY",
+        "outputId": "8e84004c-674f-4f07-f679-44577ff085d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Your program should come here"
+        "# Your program should come here\n",
+        "c=input(\"Enter a character:  \")\n",
+        "if (c==\"a\" or c==\"e\" or c==\"i\" or c==\"o\" or c==\"u\" or c==\"A\" or c==\"E\" or c==\"I\" or c==\"O\" or c==\"U\"):\n",
+        "  print(\"character is vowel\")\n",
+        "else:\n",
+        "  print(\"Character is consonant\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a character:  E\n",
+            "character is vowel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
