--- a/05_Flow_control_statement_For_loop.ipynb
+++ b/05_Flow_control_statement_For_loop.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SaiShivaniL/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,15 +39,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lHexb1UAseK6"
+        "id": "lHexb1UAseK6",
+        "outputId": "3d2693b1-31c0-4557-e7c6-43763db9695d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# range\n",
         "for i in range(9, 19, 3):\n",
         "  print (i, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9 12 15 18 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -61,7 +73,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8YRJCPP2vVPe"
+        "id": "8YRJCPP2vVPe",
+        "outputId": "1ce9c453-8ae0-471c-a02b-d77311c3764e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# list\n",
@@ -69,30 +85,66 @@
         "for each_item in my_list:\n",
         "  print (each_item, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 4 6 8 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EIPO-Aab0fMk"
+        "id": "EIPO-Aab0fMk",
+        "outputId": "d1db855d-823a-4208-d6d5-f5ca09a30493",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "my_list = ['a', 'e', 'i', 'o', 'u']\n"
+        "my_list = ['a', 'e', 'i', 'o', 'u']\n",
+        "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'e', 'i', 'o', 'u']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lWRcH-oE0nr6"
+        "id": "lWRcH-oE0nr6",
+        "outputId": "8f7deb19-e319-4a26-adc4-ebc18b5c1d99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "test_char = input(\"Enter Character: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter Character: e\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -106,19 +158,31 @@
         "    test_result = 'vowel'\n",
         "    break"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FXsvQh-C1C-m"
+        "id": "FXsvQh-C1C-m",
+        "outputId": "54bc7aa2-7a59-4c5c-bff0-835363a1cd42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (test_result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vowel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -130,19 +194,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20,2)]"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IbKt_IhW6Z4z"
+        "id": "IbKt_IhW6Z4z",
+        "outputId": "e60a0850-6c71-4408-96dc-4109a97ec0bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -154,19 +233,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20) if (number % 2 == 1)]"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ahswgAU_qBVR"
+        "id": "ahswgAU_qBVR",
+        "outputId": "4d750304-122b-485a-b2ba-df5b2b593f58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,13 +274,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Kw7G5iCumaY"
+        "id": "2Kw7G5iCumaY",
+        "outputId": "7a42a076-602f-4508-f541-cb234b886071",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]"
+        "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]\n",
+        "num=[1,2,3,4,5]\n",
+        "squares=[]\n",
+        "for i in num:\n",
+        "  squares.append(i*i)\n",
+        "print(squares)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
