--- a/06_While_Loop_Flow_Control.ipynb
+++ b/06_While_Loop_Flow_Control.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "06_While_Loop-Flow_Control.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNk563422oH/zxR2Ev1gU9h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/06_While_Loop_Flow_Control.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SaiShivaniL/fmml2021/blob/main/06_While_Loop_Flow_Control.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,7 +44,7 @@
         "#        while condition:\n",
         "#           statement-block"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -56,21 +55,33 @@
       "source": [
         "i = 0"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BPjFgz1-wgvK"
+        "id": "BPjFgz1-wgvK",
+        "outputId": "7a20a4b8-b3bf-487d-9e88-e5e84b576b6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "while (i < 10):\n",
         "   print (i, end=\" \")\n",
         "   i = i + 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1 2 3 4 5 6 7 8 9 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -80,7 +91,7 @@
       "source": [
         "# 1 1 2 3 5 8 13 "
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -91,13 +102,17 @@
       "source": [
         "a = b = 1"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8ADO1xTtxAdK"
+        "id": "8ADO1xTtxAdK",
+        "outputId": "9a66896a-5a00-49e2-a751-39e219950167",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "while (b < 10000):\n",
@@ -105,8 +120,16 @@
         "    a = a + b\n",
         "    b = a + b"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 2584 4181 6765 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -116,7 +139,7 @@
       "source": [
         "my_str = '***********'"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -127,32 +150,80 @@
       "source": [
         "str_len = len(my_str)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rjpLoZPy5GF3"
+        "id": "rjpLoZPy5GF3",
+        "outputId": "1413ff9c-8011-4cae-cd7c-c169438637a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "while (str_len > 0):\n",
         "   print (my_str[:str_len])\n",
         "   str_len = str_len - 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "***********\n",
+            "**********\n",
+            "*********\n",
+            "********\n",
+            "*******\n",
+            "******\n",
+            "*****\n",
+            "****\n",
+            "***\n",
+            "**\n",
+            "*\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "prvBHO7u7p-R"
+        "id": "prvBHO7u7p-R",
+        "outputId": "dc62cd8b-262c-4f48-ccb0-a28f2e2793aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Exercise to print the pattern in increasing order"
+        "# Exercise to print the pattern in increasing order\n",
+        "n=1\n",
+        "str_len=len(my_str)\n",
+        "while (str_len > n):\n",
+        "  print(my_str[:n])\n",
+        "  n=n+1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*\n",
+            "**\n",
+            "***\n",
+            "****\n",
+            "*****\n",
+            "******\n",
+            "*******\n",
+            "********\n",
+            "*********\n",
+            "**********\n"
+          ]
+        }
+      ]
     }
   ]
 }
