--- a/07_Defining_Functions.ipynb
+++ b/07_Defining_Functions.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/07_Defining_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SaiShivaniL/fmml2021/blob/main/07_Defining_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,30 +39,72 @@
         "      return True\n",
         "  return False"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SLpNGCWYn6Er"
+        "id": "SLpNGCWYn6Er",
+        "outputId": "5bc3deac-ca8c-4836-abe6-85a824b40aa8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "inList('Z', ['x', 'y', 'z'])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r_KUNOW3rCc6"
+        "id": "r_KUNOW3rCc6",
+        "outputId": "7fa644c0-0ff5-4752-c9b3-2355fe57d7de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write a function to check whether a given number belongs to fibonacci series or not"
+        "# Write a function to check whether a given number belongs to fibonacci series or not\n",
+        "def is_fib (num):\n",
+        "  a,b=0,1\n",
+        "  c=a+b\n",
+        "  while (c<num):\n",
+        "    a=b\n",
+        "    b=c\n",
+        "    c=a+b\n",
+        "  if c==num:\n",
+        "    print(num,\" belongs to fibonacci series\")\n",
+        "  else:\n",
+        "    print(num,\" doesn't belong to fibonacci series\")\n",
+        "\n",
+        "num=int(input(\"Enter a number \"))\n",
+        "is_fib(num)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number 5\n",
+            "5  belongs to fibonacci series\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
